--- a/references.bib
+++ b/references.bib
@@ -59,6 +59,25 @@
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Allison et al_2019_A Comprehensive Framework to Evaluate Websites.pdf}
 }
 
+@article{altmanBetterReportingRandomised1996,
+  title = {Better Reporting of Randomised Controlled Trials: The {{CONSORT}} Statement},
+  shorttitle = {Better Reporting of Randomised Controlled Trials},
+  author = {Altman, D. G.},
+  year = {1996},
+  month = sep,
+  journal = {BMJ (Clinical research ed.)},
+  volume = {313},
+  number = {7057},
+  pages = {570--571},
+  issn = {0959-8138},
+  doi = {10.1136/bmj.313.7057.570},
+  langid = {english},
+  pmcid = {PMC2352018},
+  pmid = {8806240},
+  keywords = {Periodicals as Topic,Publishing,Randomized Controlled Trials as Topic},
+  file = {/Users/james/Zotero/storage/KVZIG6MN/Altman - 1996 - Better reporting of randomised controlled trials .pdf}
+}
+
 @article{altmanHistoryEvolutionGuidelines2016a,
   title = {A History of the Evolution of Guidelines for Reporting Medical Research: The Long Road to the {{EQUATOR Network}}},
   shorttitle = {A History of the Evolution of Guidelines for Reporting Medical Research},
@@ -258,6 +277,24 @@
   abstract = {This paper describes the intervention planning process for the Home and Online Management and Evaluation of Blood Pressure (HOME BP), a digital intervention to promote hypertension self-management. It illustrates how a Person-Based Approach can be integrated with theory- and evidence-based approaches. The Person-Based Approach to intervention development emphasises the use of qualitative research to ensure that the intervention is acceptable, persuasive, engaging and easy to implement.},
   keywords = {Blood pressure,Hypertension,Intervention planning,Methodological study,Self-management,Self-monitoring,Theoretical modelling},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Band et al_2017_Intervention planning for a digital intervention for self-management of2.pdf}
+}
+
+@article{barnesImpactOnlineWriting2015,
+  title = {Impact of an Online Writing Aid Tool for Writing a Randomized Trial Report: The {{COBWEB}} ({{Consort-based WEB}} Tool) Randomized Controlled Trial},
+  shorttitle = {Impact of an Online Writing Aid Tool for Writing a Randomized Trial Report},
+  author = {Barnes, Caroline and Boutron, Isabelle and Giraudeau, Bruno and Porcher, Raphael and Altman, Douglas G. and Ravaud, Philippe},
+  year = {2015},
+  month = sep,
+  journal = {BMC Medicine},
+  volume = {13},
+  number = {1},
+  pages = {221},
+  issn = {1741-7015},
+  doi = {10.1186/s12916-015-0460-y},
+  urldate = {2020-10-21},
+  abstract = {Incomplete reporting is a frequent waste in research. Our aim was to evaluate the impact of a writing aid tool (WAT) based on the CONSORT statement and its extension for non-pharmacologic treatments on the completeness of reporting of randomized controlled trials (RCTs).},
+  keywords = {Clinical epidemiology,CONSORT statement,Randomized controlled trial,Reporting guidelines,Transparency},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Barnes et al_2015_Impact of an online writing aid tool for writing a randomized trial report.pdf;/Users/james/Zotero/storage/85AY3LXG/Barnes et al_2015_Impact of an online writing aid tool for writing a randomized trial report.pdf;/Users/james/Zotero/storage/Q9AMQS2S/s12916-015-0460-y.html}
 }
 
 @article{bastuji-garinImpactSTROBEStatement2013,
@@ -537,6 +574,15 @@
   pmcid = {PMC1824709},
   pmid = {17389922},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Cobo et al_2007_Statistical Reviewers Improve Reporting in Biomedical Articles.pdf}
+}
+
+@misc{ComplianceQuestionnaireARRIVE,
+  title = {Compliance {{Questionnaire}} | {{ARRIVE Guidelines}}},
+  urldate = {2023-10-24},
+  abstract = {Designed for use by journals assessing manuscripts submitted for publication, this questionnaire allows for streamlined evaluation of how well a manuscript complies with the ARRIVE Essential 10. , standard},
+  howpublished = {https://arriveguidelines.org/resources/compliance-questionnaire},
+  langid = {english},
+  file = {/Users/james/Zotero/storage/DB3FY8RQ/ARRIVE Compliance Questionnaire.pdf}
 }
 
 @misc{craigDevelopingEvaluatingComplex2021,
@@ -981,6 +1027,15 @@
   keywords = {Humans,Psychopharmacology,PSYCHOPHARMACOLOGY,Research,RESEARCH}
 }
 
+@misc{GoodReportsOrg,
+  title = {{{GoodReports}}.Org},
+  urldate = {2020-02-14},
+  abstract = {GoodReports helps medical researchers find and use appropriate reporting guidelines and checklists.},
+  howpublished = {https://www.goodreports.org},
+  langid = {english},
+  file = {/Users/james/Zotero/storage/MRJN2FXR/uHYDAr.html}
+}
+
 @misc{Guideline,
   title = {Guideline},
   urldate = {2023-01-10},
@@ -1001,6 +1056,24 @@
   keywords = {Quality assessment tool,Randomized controlled clinical trial,Report specification,Researchers,Status,Traditional Chinese medicine}
 }
 
+@article{haddawayPRISMA2020PackageShiny2022,
+  title = {{{PRISMA2020}}: {{An R}} Package and {{Shiny}} App for Producing {{PRISMA}} 2020-Compliant Flow Diagrams, with Interactivity for Optimised Digital Transparency and {{Open Synthesis}}},
+  shorttitle = {{{PRISMA2020}}},
+  author = {Haddaway, Neal R. and Page, Matthew J. and Pritchard, Chris C. and McGuinness, Luke A.},
+  year = {2022},
+  journal = {Campbell Systematic Reviews},
+  volume = {18},
+  number = {2},
+  pages = {e1230},
+  issn = {1891-1803},
+  doi = {10.1002/cl2.1230},
+  urldate = {2023-10-24},
+  abstract = {Background Reporting standards, such as PRISMA aim to ensure that the methods and results of systematic reviews are described in sufficient detail to allow full transparency. Flow diagrams in evidence syntheses allow the reader to rapidly understand the core procedures used in a review and examine the attrition of irrelevant records throughout the review process. Recent research suggests that use of flow diagrams in systematic reviews is poor and of low quality and called for standardised templates to facilitate better reporting in flow diagrams. The increasing options for interactivity provided by the Internet gives us an opportunity to support easy-to-use evidence synthesis tools, and here we report on the development of a tool for the production of PRISMA 2020-compliant systematic review flow diagrams. Methods and Findings We developed a free-to-use, Open Source R package and web-based Shiny app to allow users to design PRISMA flow diagrams for their own systematic reviews. Our tool allows users to produce standardised visualisations that transparently document the methods and results of a systematic review process in a variety of formats. In addition, we provide the opportunity to produce interactive, web-based flow diagrams (exported as HTML files), that allow readers to click on boxes of the diagram and navigate to further details on methods, results or data files. We provide an interactive example here; https://prisma-flowdiagram.github.io/. Conclusions We have developed a user-friendly tool for producing PRISMA 2020-compliant flow diagrams for users with coding experience and, importantly, for users without prior experience in coding by making use of Shiny (https://estech.shinyapps.io/prisma\_flowdiagram/). This free-to-use tool will make it easier to produce clear and PRISMA 2020-compliant systematic review flow diagrams. Significantly, users can also produce interactive flow diagrams for the first time, allowing readers of their reviews to smoothly and swiftly explore and navigate to further details of the methods and results of a review. We believe this tool will increase use of PRISMA flow diagrams, improve the compliance and quality of flow diagrams, and facilitate strong science communication of the methods and results of systematic reviews by making use of interactivity. We encourage the systematic review community to make use of the tool, and provide feedback to streamline and improve their usability and efficiency.},
+  copyright = {\textcopyright{} 2022 The Authors. Campbell Systematic Reviews published by John Wiley \& Sons Ltd on behalf of The Campbell Collaboration.},
+  langid = {english},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Haddaway et al_2022_PRISMA2020.pdf}
+}
+
 @article{hairRandomisedControlledTrial2019,
   title = {A Randomised Controlled Trial of an {{Intervention}} to {{Improve Compliance}} with the {{ARRIVE}} Guidelines ({{IICARus}})},
   author = {Hair, Kaitlyn and Macleod, Malcolm R. and Sena, Emily S. and Sena, Emily S. and Hair, Kaitlyn and Macleod, Malcolm R. and Howells, David and Bath, Philip and Irvine, Cadi and MacCallum, Catriona and Morrison, Gavin and Clark, Alejandra and Alvino, Gina and Dohm, Michelle and Liao, Jing and Sena, Chris and Moreland, Rosie and Cramond, Fala and Currie, Gillian L. and Bahor, Zsanett and Grill, Paula and {Bannach-Brown}, Alexandra and Marcu, Daniel-Cosmin and Antar, Sarah and Blazek, Katrina and Konold, Timm and Dingwall, Monica and Hohendorf, Victoria and Hosh, Mona and Gerlei, Klara Zsofia and Wever, Kimberley Elaine and Jones, Victor and Quinn, Terence J. and Karp, Natasha A. and Freymann, Jennifer and Shek, Anthony and Gregorc, Teja and Rinaldi, Arianna and Jheeta, Privjyot and Nazzal, Ahmed and Henshall, David Ewart and Storey, Joanne and Baginskaite, Julija and {de Oliveira}, Cilene Lino and Laban, Kamil and Charbonney, Emmanuel and Lynn, Savannah A. and Cascella, Marco and Wheater, Emily and Baker, Daniel and Cheyne, Ryan and Christopher, Edward and Roncon, Paolo and {De-Souza}, Evandro Ara{\'u}jo and Warda, Mahmoud and Corke, Sarah and Ammar, Zeinab and O'Connor, Leigh and Devonshire, Ian M. and McCann, Sarah K. and Gray, Laura J. and {Tanriver-Ayder}, Ezgi and {on behalf of the IICARus Collaboration}},
@@ -1016,6 +1089,26 @@
   abstract = {The ARRIVE (Animal Research: Reporting of In Vivo Experiments) guidelines are widely endorsed but compliance is limited. We sought to determine whether journal-requested completion of an ARRIVE checklist improves full compliance with the guidelines.},
   keywords = {ARRIVE,Randomised controlled trial,Reporting guidelines},
   file = {/Users/james/Zotero/storage/4VGU2XPZ/Hair et al_2019_A randomised controlled trial of an Intervention to Improve Compliance with the.pdf;/Users/james/Zotero/storage/J2QWLZPM/s41073-019-0069-3.html}
+}
+
+@article{hawwashUsefulnessApplyingResearch2019,
+  title = {Usefulness of Applying Research Reporting Guidelines as {{Writing Aid}} Software: A Crossover Randomised Controlled Trial},
+  shorttitle = {Usefulness of Applying Research Reporting Guidelines as {{Writing Aid}} Software},
+  author = {Hawwash, Dana and Sharp, Melissa K. and Argaw, Alemayehu and Kolsteren, Patrick and Lachat, Carl},
+  year = {2019},
+  month = nov,
+  journal = {BMJ Open},
+  volume = {9},
+  number = {11},
+  issn = {2044-6055, 2044-6055},
+  doi = {10.1136/bmjopen-2019-030943},
+  urldate = {2020-02-14},
+  abstract = {{$<$}h3{$>$}Objectives{$<$}/h3{$>$} {$<$}p{$>$}To assess the intention of using a Writing Aid software, which integrates four research reporting guidelines (Consolidated Standards of Reporting Trials, Preferred Reporting Items for Systematic Reviews and Meta-Analyses, Strengthening the Reporting of Observational Studies in Epidemiology and STrengthening the Reporting of Observational Studies in Epidemiology-nutritional epidemiology) and their Elaboration \&amp; Explanation (E\&amp;E) documents during the write-up of research in Microsoft Word compared with current practices.{$<$}/p{$><$}h3{$>$}Design{$<$}/h3{$>$} {$<$}p{$>$}Two-arms crossover randomised controlled trial with no blinding and no washout period.{$<$}/p{$><$}h3{$>$}Setting{$<$}/h3{$>$} {$<$}p{$>$}Face-to-face or online sessions.{$<$}/p{$><$}h3{$>$}Participants{$<$}/h3{$>$} {$<$}p{$>$}54 (28 in arm 1 and 26 in arm 2) doctoral and postdoctoral researchers.{$<$}/p{$><$}h3{$>$}Interventions{$<$}/h3{$>$} {$<$}p{$>$}Reporting guidelines and their E\&amp;E document were randomly administered as Writing Aid or as Word documents in a single 30 min to 1 hour session, with a short break before crossing over to the other study intervention.{$<$}/p{$><$}h3{$>$}Primary and secondary outcomes{$<$}/h3{$>$} {$<$}p{$>$}Using the Technology Acceptance Model, we assessed the primary outcome: the difference in the mean of intention of use; and secondary outcomes: the difference in mean perceived ease of use and perceived usefulness. The three outcomes were measured using questions with a 7-point Likert-scale. Secondary analysis using structural equation modelling (SEM) was applied to explore the relationships between the outcomes.{$<$}/p{$><$}h3{$>$}Results{$<$}/h3{$>$} {$<$}p{$>$}No significant difference in reported intention of use (mean difference and 95\% CI 0.25 (\textendash 0.05 to 0.55), p=0.10), and perceived usefulness (mean difference and 95\% CI 0.19 (\textendash 0.04 to 0.41), p=0.10). The Writing Aid performed significantly better than the word document on researchers' perceived ease of use (mean difference and 95\% CI 0.59 (0.29 to 0.89), p\&lt;0.001). In the SEM analysis, participants' intention of using the tools was indirectly affected by perceived ease of use (beta 0.53 p\emph{=}0.002).{$<$}/p{$><$}h3{$>$}Conclusions{$<$}/h3{$>$} {$<$}p{$>$}Despite no significant difference in the intention of use between the tools, administering reporting guidelines as Writing Aid is perceived as easier to use, offering a possibility to further explore its applicability to enhance reporting adherence.{$<$}/p{$>$}},
+  copyright = {\textcopyright{} Author(s) (or their employer(s)) 2019. Re-use permitted under CC BY-NC. No commercial re-use. See rights and permissions. Published by BMJ.. This is an open access article distributed in accordance with the Creative Commons Attribution Non Commercial (CC BY-NC 4.0) license, which permits others to distribute, remix, adapt, build upon this work non-commercially, and license their derivative works on different terms, provided the original work is properly cited, appropriate credit is given, any changes made indicated, and the use is non-commercial. See:~http://creativecommons.org/licenses/by-nc/4.0/.},
+  langid = {english},
+  pmid = {31699728},
+  keywords = {Explanation,Extension,Science General,Strobe Statement,Technology Acceptance Model},
+  file = {/Users/james/Zotero/storage/447K7CID/Hawwash et al_2019_Usefulness of applying research reporting guidelines as Writing Aid software.pdf;/Users/james/Zotero/storage/PVR7PF59/e030943.html}
 }
 
 @misc{HealthMedicalArticles,
@@ -1296,6 +1389,22 @@
   langid = {english},
   pmid = {19622552},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Liberati et al_2009_The PRISMA statement for reporting systematic reviews and meta-analyses of.pdf}
+}
+
+@article{liberatiUnfinishedTripUncertainties2004,
+  title = {An Unfinished Trip through Uncertainties},
+  author = {Liberati, Alessandro},
+  year = {2004},
+  month = feb,
+  journal = {BMJ : British Medical Journal},
+  volume = {328},
+  number = {7438},
+  pages = {531},
+  issn = {0959-8138},
+  urldate = {2023-10-24},
+  pmcid = {PMC351869},
+  pmid = {null},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Liberati_2004_An unfinished trip through uncertainties.pdf}
 }
 
 @misc{LILACS,
@@ -1643,6 +1752,25 @@
   abstract = {NICE helps practitioners and commissioners get the best care to patients, fast, while ensuring value for the taxpayer.},
   howpublished = {https://www.nice.org.uk/},
   langid = {english}
+}
+
+@article{obrienStandardsReportingQualitative2014,
+  title = {Standards for {{Reporting Qualitative Research}}: {{A Synthesis}} of {{Recommendations}}},
+  shorttitle = {Standards for {{Reporting Qualitative Research}}},
+  author = {O'Brien, Bridget C. and Harris, Ilene B. and Beckman, Thomas J. and Reed, Darcy A. and Cook, David A.},
+  year = {2014},
+  month = sep,
+  journal = {Academic Medicine},
+  volume = {89},
+  number = {9},
+  pages = {1245--1251},
+  issn = {1040-2446},
+  doi = {10.1097/ACM.0000000000000388},
+  urldate = {2022-10-07},
+  abstract = {Purpose~         Standards for reporting exist for many types of quantitative research, but currently none exist for the broad spectrum of qualitative research. The purpose of the present study was to formulate and define standards for reporting qualitative research while preserving the requisite flexibility to accommodate various paradigms, approaches, and methods.         Method~         The authors identified guidelines, reporting standards, and critical appraisal criteria for qualitative research by searching PubMed, Web of Science, and Google through July 2013; reviewing the reference lists of retrieved sources; and contacting experts. Specifically, two authors reviewed a sample of sources to generate an initial set of items that were potentially important in reporting qualitative research. Through an iterative process of reviewing sources, modifying the set of items, and coding all sources for items, the authors prepared a near-final list of items and descriptions and sent this list to five external reviewers for feedback. The final items and descriptions included in the reporting standards reflect this feedback.         Results~         The Standards for Reporting Qualitative Research (SRQR) consists of 21 items. The authors define and explain key elements of each item and provide examples from recently published articles to illustrate ways in which the standards can be met.         Conclusions~         The SRQR aims to improve the transparency of all aspects of qualitative research by providing clear standards for reporting qualitative research. These standards will assist authors during manuscript preparation, editors and reviewers in evaluating a manuscript for potential publication, and readers when critically appraising, applying, and synthesizing study findings.},
+  langid = {american},
+  keywords = {\_tablet},
+  file = {/Users/james/Zotero/storage/6YDDEEPQ/O’Brien et al_2014_Standards for Reporting Qualitative Research.pdf;/Users/james/Zotero/storage/BWTCIS8F/O’Brien et al_2014_Standards for Reporting Qualitative Research.pdf}
 }
 
 @article{pagePRISMA2020Statement2021,
@@ -2390,19 +2518,4 @@
   abstract = {During the COVID-19 pandemic, the scientific world is in urgent need for new evidence on the treatment of COVID patients. The reporting quality is crucial for transparent scientific publication. Concerns of data integrity, methodology and transparency were raised. Here, we assessed the adherence of observational studies comparing treatments of COVID 19 to the STROBE checklist in 2020.},
   keywords = {COVID-19,Observational studies,Reporting quality,STROBE statement},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Ziemann et al_2022_Poor reporting quality of observational clinical studies comparing treatments.pdf}
-}
-
-@article{obrien2014,
-	title = {Standards for Reporting Qualitative Research: A Synthesis of Recommendations},
-	author = {{O{\textquoteright}Brien}, Bridget C. and Harris, Ilene B. and Beckman, Thomas J. and Reed, Darcy A. and Cook, David A.},
-	year = {2014},
-	month = {09},
-	date = {2014-09},
-	journal = {Academic Medicine},
-	pages = {1245{\textendash}1251},
-	volume = {89},
-	number = {9},
-	doi = {10.1097/ACM.0000000000000388},
-	url = {https://journals.lww.com/academicmedicine/fulltext/2014/09000/Standards_for_Reporting_Qualitative_Research__A.21.aspx},
-	langid = {canadian}
 }
